force-app/main/default/objects/custom_create201__c/custom_create201__c.object-meta.xml
<CustomObject>
    <label>Custom created object201</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects201</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>