force-app/main/default/objects/custom_create201__c/fields/custom_create_201field524__c.field-meta.xml
<CustomField>
    <fullName>custom_create_201field524__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 201field524</label>
    <type>Checkbox</type>
</CustomField>