force-app/main/default/objects/custom_create201__c/fields/custom_create_201field567__c.field-meta.xml
<CustomField>
    <fullName>custom_create_201field567__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 201field567</label>
    <type>Checkbox</type>
</CustomField>